# vulkan_video

./: .gitattributes  .gitignore  Cargo.toml  README.md
.run/: test.run.xml
scripts/: update_readmes.sh
src/: allocation.rs  commandbuffer.rs  device.rs  error.rs  instance.rs  lib.rs  physicaldevice.rs  queue.rs
src/ops/: compute.rs  copyb2b.rs  copyi2b.rs  decodeh264.rs  dummy.rs  fill.rs  mod.rs
src/resources/: buffer.rs  image.rs  imageview.rs  mod.rs
src/shader/: mod.rs  parameters.rs  pipeline.rs  shader.rs
src/video/: instance.rs  mod.rs  session.rs  sessionparameters.rs  utils.rs
src/video/h264/: h264inspector.rs  mod.rs  parameters.rs
tests/: decode.rs  h264reader.rs
tests/shaders/: bindings.glsl  hello_world.glsl  image_color.glsl  recompile_shaders.bat  recompile_shaders.sh
tests/shaders/compiled/: bindings.spv  hello_world.spv  image_color.spv
