[package]
name = "vulkan_video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", rev="3f5b96b3638a9ff341584e82188c3ba3aa5cb996", version = "0.37.3" }
h264-reader = "0.7.0"
thiserror = "1.0.44"