[package]
name = "vulkan_video"
description = "Vulkan Video bindings in safe Rust via ash"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", version = "0.38.0" }
h264-reader = "0.8.0"
